# taskGUI

./: CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake  tasks.json
src/: main.cpp  task_manager.cpp  task_manager.h
